# readstack-api

./: .gitignore  Dockerfile  README.md  newsletters.csv  pyproject.toml
app/: crud.py  database.py  deps.py  main.py  models.py  schemas.py
app/api/routers/: categories.py  newsletters.py
